# mpc-autoscaler

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  go.mod
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experiment_regression.yml  feature_request.yml  micro_contribution.yml  reproduction_feedback.yml
.github/workflows/: ci.yaml  codeql.yaml  dependency-review.yaml  labeler.yaml  pages.yaml  release.yaml  scorecard.yaml  security.yaml  tag-release.yaml  (+1 more)
analysis/: README.md  pyproject.toml
analysis/mpc_autoscaler_analysis/: __init__.py  paths.py
analysis/mpc_autoscaler_analysis/artifacts/: __init__.py  control.py  costs.py  vegeta.py
analysis/mpc_autoscaler_analysis/cli/: __init__.py  summarize_costs.py  summarize_run.py
analysis/mpc_autoscaler_analysis/data/: __init__.py
analysis/mpc_autoscaler_analysis/data/traces/: baseline_seasonality_profile_dt15.csv  baseline_spike_profile_dt15.csv  baseline_step_profile_dt15.csv
analysis/mpc_autoscaler_analysis/mpc/: __init__.py  qp.py
analysis/mpc_autoscaler_analysis/offline/: __init__.py  grid_search.py  realistic_sim.py  simulation.py  synthetic_trace.py  trace_from_phases.py  validate_trace.py
analysis/mpc_autoscaler_analysis/online/: __init__.py  control_loop.py
analysis/tests/: test_artifacts.py  test_cli.py  test_control_loop.py  test_mpc_qp.py
dashboards/: README.md
docs/: API.md  ARCHITECTURE.md  BENCHMARK_MATRIX.md  DEMO.md  LIMITATIONS.md  METHODOLOGY.md  MICRO_CONTRIBUTIONS.md  MPC_VS_HPA_60_SECONDS.md  OUTREACH_DRAFTS.md  RELEASE.md  REPRODUCIBILITY.md  RESULTS.md
experiments/: ARCHIVE_INDEX.md  EVIDENCE_MAP.csv  MANIFEST.md  README.md  package-thesis-evidence.sh
loadgen/: README.md
site/: 404.html  architecture.html  demo.html  experiments.html  index.html  llms.txt  reproducibility.html  robots.txt  site.webmanifest  sitemap.xml
toy-load/: .dockerignore  Dockerfile  Makefile  README.md  go.mod
(+91 files in other folders)
